# efg-food

./: Cargo.toml
.github/workflows/: menu.yml
src/: errors.rs  main.rs  parser.rs
src/website/: mem_file.rs  mod.rs
v1/: WK402021.json  WK412021.json  WK452021.json  WK462021.json  WK482021.json  WK502021.json  latest.json
