[package]
name = "efg-food-parser"
version = "0.1.0"
authors = ["sp1rit <sp1rit@disroot.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
tabula = "0.1"
anyhow = "1.0"
thiserror = "1.0"
kuchiki = "0.8"
libc = "0.2"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.isahc]
version = "1.5"
default-features = false
features = ["http2", "text-decoding"]